--- a/src/WebHeader.css
+++ b/src/WebHeader.css
@@ -61,9 +61,22 @@ header{
 @media screen and (max-width: 700px){
     .Logo {
         display: none;
+        padding-left: 0
     }
 
     .pad{
         display: none;
     }
+
+    header{
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;  
+    gap: 0;
+    }
+
+    .head{
+        grid-column: 1;
+    }
+    
 }
